# manual_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  main.py  memo.md  pyproject.toml
backend/: .dockerignore  .gcloudignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  package-lock.json  pyproject.toml  test_api.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: qa.py  (+11 more)
backend/app/schemas/: __init__.py  appliance.py  contact.py  group.py  notification.py  push_subscription.py  qa.py  qa_abuse.py  tier.py  user.py
backend/app/services/: appliance_service.py  contact_service.py  group_service.py  image_conversion.py  image_recognition.py  maintenance_cache_service.py  maintenance_extraction.py  maintenance_log_service.py  maintenance_notification_service.py  manual_search.py  manufacturer_domain.py  notification_service.py  panasonic_manual.py  pdf_decryption.py  pdf_storage.py  push_subscription_service.py  qa_abuse_service.py  qa_chat_service.py  qa_rating_service.py  qa_service.py  qa_session_service.py  supabase_client.py  text_cache_service.py  tier_service.py  user_service.py
backend/scripts/: decrypt_existing_pdfs.py
backend/supabase/: README.md  SCHEMA.md  seed.sql
backend/supabase/migrations/: 00001_initial_schema.sql  00002_manufacturer_domains.sql  00003_storage_shared_manuals.sql  00004_shared_appliances_refactor.sql  00005_create_manuals_bucket.sql  00006_shared_maintenance_items.sql  00007_auth_users_sync_triggers.sql  00008_qa_ratings.sql  00009_qa_abuse.sql  00011_user_appliances_group_support.sql  00012_update_rls_for_groups.sql  00013_single_group_constraint.sql  00014_fix_group_appliance_ownership.sql  00016_qa_sessions.sql  00018_add_session_summary.sql  00019_add_pdf_page_columns.sql  00019_normalize_group_owner.sql  00020_create_user_tiers.sql  00020_drop_source_page_column.sql  00021_add_tier_to_users.sql  00022_create_user_daily_usage.sql  00023_add_admin_tier_and_update_premium.sql  00025_group_auto_share.sql  20260110091600_create_groups_tables.sql  20260110122344_add_owner_to_group_members_trigger.sql  20260110234622_normalize_maintenance_tables.sql  20260111010541_add_message_metadata.sql  20260111035538_create_user_tiers.sql  (+7 more)
(+266 files in other folders)
